# cars-rating-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: d9dbab8476db_.py
src/: database.py  log.py  main.py  models.py  schemas.py
src/api/: cars.py
test/: conftest.py  test_cars.py  test_data.py
