[tool.poetry]
name = "cars-rating-api"
version = "0.1.0"
description = ""
authors = ["Fangolin <jakubkowalczyk0192@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.2"}
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
pytest = "^8.3.2"
httpx = "^0.27.2"
loguru = "^0.7.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.8.0"
ruff = "^0.5.7"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"